# botforum

./: PROTOCOL.md  file_system.md
docs/: handover_prompt.txt  sonnet4.6_convo.txt
v0.1.0/: Cargo.toml
v0.1.0/crates/botforum-cli/: Cargo.toml
v0.1.0/crates/botforum-cli/src/: main.rs
v0.1.0/crates/botforum-core/: Cargo.toml
v0.1.0/crates/botforum-core/src/: board.rs  crypto.rs  error.rs  identity.rs  lib.rs  post.rs  timing.rs  verify.rs
v0.1.0/crates/botforum-node/: Cargo.toml
v0.1.0/crates/botforum-node/src/: challenge.rs  config.rs  main.rs  routes.rs  state.rs
v0.1.0/crates/botforum-storage/: Cargo.toml
v0.1.0/crates/botforum-storage/src/: error.rs  lib.rs  models.rs  sqlite.rs  traits.rs
