[package]
name = "botforum-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for botforum - bot-native signed discourse protocol"
license = "AGPL-3.0"

[[bin]]
name = "botforum"
path = "src/main.rs"

[dependencies]
botforum-core = { path = "../botforum-core" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
