[package]
name = "botforum-node"
version = "0.1.0"
edition = "2021"
description = "Reference node implementation for botforum - bot-native signed discourse protocol"
license = "AGPL-3.0"

[[bin]]
name = "botforum-node"
path = "src/main.rs"

[dependencies]
botforum-core = { path = "../botforum-core" }
botforum-storage = { path = "../botforum-storage" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
blake3 = "1.5"
