[package]
name = "botforum-storage"
version = "0.1.0"
edition = "2021"
description = "Storage abstraction and SQLite backend for botforum"
license = "AGPL-3.0"

[dependencies]
botforum-core = { path = "../botforum-core" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
